<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.grp13.dilemma.CreateDilemma">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText android:id="@+id/dilemmaName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="Dilemma titel"
                    android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                    android:maxLines="1" android:singleLine="true"> <requestFocus /> </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText android:id="@+id/dilemmaDesc" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="Dilemma beskrivelse"
                    android:imeOptions="actionUnspecified" android:inputType="textMultiLine"
                    android:maxLines="100" android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView"
                android:textIsSelectable="false"
                android:layout_marginLeft="5dp"
                android:text="Dilemma seriøsitet"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="1"
                    android:background="@drawable/gravity1_button"
                    android:id="@+id/gravity1Btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:textColor="#ffffff" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="2"
                    android:background="@drawable/gravity2_button"
                    android:id="@+id/gravity2Btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:textColor="#ffffff" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="3"
                    android:background="@drawable/gravity3_button"
                    android:id="@+id/gravity3Btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:textColor="#ffffff" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="4"
                    android:background="@drawable/gravity4_button"
                    android:id="@+id/gravity4Btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:textColor="#ffffff" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="5"
                    android:background="@drawable/gravity5_button"
                    android:id="@+id/gravity5Btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20dp"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2"
                android:textIsSelectable="false"
                android:layout_marginLeft="5dp"
                android:text="Svarmuligheder: "
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp" />

            <EditText android:id="@+id/answer1" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Svarmulighed 1"
                android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" android:visibility="visible"
                android:layout_marginBottom="10dp" android:textColor="#000000"/>

            <EditText android:id="@+id/answer2" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Svarmulighed 2"
                android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" android:visibility="visible"
                android:layout_marginBottom="10dp" android:textColor="#000000"/>

            <EditText android:id="@+id/answer3" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Svarmulighed 3"
                android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" android:visibility="gone"
                android:layout_marginBottom="10dp" android:textColor="#000000"/>

            <EditText android:id="@+id/answer4" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Svarmulighed 4"
                android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" android:visibility="gone"
                android:layout_marginBottom="10dp" android:textColor="#000000"/>

            <EditText android:id="@+id/answer5" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="Svarmulighed 5"
                android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" android:visibility="gone"
                android:layout_marginBottom="10dp" android:textColor="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Opret"
                android:id="@+id/createDilButton"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentEnd="true"
                android:layout_gravity="right"
                android:visibility="visible"/>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
